[fix] fixed macOS tkinter pyinstaller problem

--- a/opsi-dev-tool.yml
+++ b/opsi-dev-tool.yml
@@ -4,7 +4,8 @@ pyinstaller-poetry:
     all: []
     windows: []
     linux: []
-    darwin: []
+    darwin:
+      - tkinter
   scripts:
     - script: run-opsi-deploy-client-agent
       binaries:
