[chg] added deletion of poetry.lock for mac build (debug)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ build:osx-pyinstaller:
     - macos
   script:
     - source $HOME/.poetry/env
+    - rm poetry.lock   # as debug test
     - poetry install
     - poetry run opsi-dev-tool -l info --pyinstaller-poetry-build
     - ./dist/opsi-deploy-client-agent --version
