[fix] added exclude-modules tkinter for darwin

--- a/opsi-dev-tool.yml
+++ b/opsi-dev-tool.yml
@@ -5,6 +5,10 @@ pyinstaller-poetry:
     windows: []
     linux: []
     darwin: []
+  extra_args:
+    darwin:
+      - --exclude-module
+      - tkinter
   scripts:
     - script: run-opsi-deploy-client-agent
       binaries:
