[fix] fixed hidden imports

--- a/opsi-dev-tool.yml
+++ b/opsi-dev-tool.yml
@@ -2,7 +2,17 @@ pyinstaller-poetry:
   one_file: yes
   hidden_imports:
     all:
-      - OPSI.Backend.*
+      - OPSI.Backend.DHCPD
+      - OPSI.Backend.File
+      - OPSI.Backend.HostControl
+      - OPSI.Backend.HostControlSafe
+      - OPSI.Backend.JSONRPC
+      - OPSI.Backend.MySQL
+      - OPSI.Backend.OpsiPXEConfd
+      - OPSI.Backend.Replicator
+      - OPSI.Backend.SQLite
+      - OPSI.Util.Ping
+      - OPSI.Util.WIM
     windows: []
     linux: []
     darwin: []
