[chg] cleaned old-style strings, updated python-opsi

--- a/opsi-dev-tool.yml
+++ b/opsi-dev-tool.yml
@@ -17,6 +17,11 @@ pyinstaller-poetry:
     linux: []
     darwin: []
   extra_args:
+    linux:
+      - --exclude
+      - tcl
+      - --exclude
+      - tk
     darwin:
       - --exclude-module
       - tkinter
