--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ paramiko = "^2.7.2"
 pytest = "^5.2"
 opsi-dev-tools = "^1.0.43"
 pyinstaller = "^4.0"
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
