[fix] added hidden-import paramiko for linux and macos

--- a/opsi-dev-tool.yml
+++ b/opsi-dev-tool.yml
@@ -14,8 +14,10 @@ pyinstaller-poetry:
       - OPSI.Util.Ping
       - OPSI.Util.WIM
     windows: []
-    linux: []
-    darwin: []
+    linux:
+      - paramiko
+    darwin:
+      - paramiko
   extra_args:
     darwin:
       - --exclude-module
