--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
-image: python:3.7-stretch
+image: docker.uib.gmbh/opsi/dev/pybuilder:uib-python-default
 
 stages:
   - build
-  - package
 
 .get-opsi-server: &get-opsi-server |
   url=$(git remote -v | grep fetch | cut -f2 | sed s'#/opsi-deploy-client-agent.git.*#/opsi-server.git#')
@@ -13,14 +12,11 @@ build:linux-pyinstaller:
   stage: build
   script:
     - *get-opsi-server
-    - apt -y install curl
-    - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
-    - source $HOME/.poetry/env
     - poetry install
     - poetry run opsi-dev-tool -l info --pyinstaller-poetry-build
     - ./dist/opsi-deploy-client-agent --version
-    - '[ "$CI_COMMIT_TAG" = "" ] && poetry run opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent "$CI_JOB_ID"'
-    - '[ "$CI_COMMIT_TAG" = "" ] || poetry run opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent'
+    - '[ "$CI_COMMIT_TAG" = "" ] && opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent "$CI_JOB_ID"'
+    - '[ "$CI_COMMIT_TAG" = "" ] || opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent'
   artifacts:
     name: 'deploy-linux-pyinstaller'
     paths:
