--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = "^3.7"
 python-opsi = "^4.2.0"
 #python-opsi = {path = "../python-opsi"}
 paramiko = "^2.7.2"
+python-opsi-common = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
