--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ test:pytest-pylint:
   stage: test
   script:
     - poetry install
-    - poetry run pylint --disable=R,C,fixme opsideployclientagent
+    - poetry run pylint --disable=R,fixme opsideployclientagent
+    - poetry run flake8 opsideployclientagent
 
 build:linux-pyinstaller:
   stage: build
