--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "opsi-deploy-client-agent"
-version = "4.2.0.16"
+version = "4.2.0.17"
 description = "tool to deploy the opsi-client-agent on linux, windows and macOS clients"
 homepage = "https://www.opsi.org"
 license = "AGPL-3.0"
@@ -14,17 +14,18 @@ url = "https://pypi.uib.gmbh/simple/"
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7,<3.11"
 python-opsi = "^4.2.0"
 #python-opsi = {path = "../python-opsi"}
 paramiko = "^2.7.2"
 python-opsi-common = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2"
 opsi-dev-tools = "^1.0.43"
 pyinstaller = "^4.0"
 pylint = "^2.6.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
