[chg] Set packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ homepage = "https://www.opsi.org"
 license = "AGPL-3.0"
 authors = ["uib GmbH <info@uib.de>"]
 maintainers = ["uib GmbH <info@uib.de>"]
+packages = [
+	{ include = "opsideployclientagent" }
+]
 
 [[tool.poetry.source]]
 name = "uib"
