--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:linux-pyinstaller:
   script:
     - *get-opsi-server
     - poetry install
-    - poetry run opsi-dev-cli pyinstaller build -l info
+    - poetry run opsi-dev-tool --pyinstaller-poetry-build -l info
     - ./dist/opsi-deploy-client-agent --version
     - '[ "$CI_COMMIT_TAG" = "" ] && opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent "$CI_JOB_ID"'
     - '[ "$CI_COMMIT_TAG" = "" ] || opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent'
