--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ python = ">=3.10,<3.11"
 python-opsi = "^4.2.0.274"
 python-opsi-common = "^4.2.0.275"
 paramiko = "^2.9"
-pypsexec = "^0.3.0"
+impacket = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
