--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-opsi = "^4.2.0.274"
 python-opsi-common = "^4.2.0.275"
 paramiko = "^2.9"
 impacket = "^0.10.0"
+smbprotocol = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
