--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ test:pytest-pylint:
   script:
     - poetry lock --no-update
     - poetry install
+    # Conflicts with smbclient package
+    - rm .venv/bin/smbclient.py || true
     - poetry run pylint --disable=R,fixme opsideployclientagent
     - poetry run flake8 opsideployclientagent
 
@@ -23,6 +25,8 @@ build:linux-pyinstaller:
     - *get-opsi-server
     - poetry lock --no-update
     - poetry install
+    # Conflicts with smbclient package
+    - rm .venv/bin/smbclient.py || true
     - poetry run opsi-dev-tool --pyinstaller-poetry-build -l info
     - ./dist/opsi-deploy-client-agent --version
     - '[ "$CI_COMMIT_TAG" = "" ] && opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent "$CI_JOB_ID"'
