--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "opsi-deploy-client-agent"
-version = "4.2.0.23"
+version = "4.2.0.24"
 description = "tool to deploy the opsi-client-agent on linux, windows and macOS clients"
 homepage = "https://www.opsi.org"
 license = "AGPL-3.0"
@@ -16,19 +16,19 @@ url = "https://pypi.uib.gmbh/simple/"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
-python-opsi = "^4.2.0.274"
-python-opsi-common = "^4.2.0.275"
+python-opsi-common = ">=4.3,<4.4"
 paramiko = "^2.9"
 impacket = "^0.10"
 smbprotocol = "^1.9"
+python-opsi = "^4.3.0.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
 pyinstaller = "^5.1"
 pylint = "^2.12"
 tan = "^22.2"
-flake8 = "^4.0"
-mypy = "^0.961"
+flake8 = "^6.0"
+mypy = "^1.1"
 
 [tool.poetry.scripts]
 opsi-deploy-client-agent = "opsideployclientagent.__main__:main"
