--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,8 @@
-image: docker.uib.gmbh/opsi/dev/pybuilder:uib-python-3.10
+image: docker.uib.gmbh/opsi/dev/pybuilder:uib-python-default
 
 stages:
   - test
   - build
-
-.get-opsi-server: &get-opsi-server |
-  url=$(git remote -v | grep fetch | cut -f2 | sed s'#/opsi-deploy-client-agent.git.*#/opsi-server.git#')
-  GIT_TERMINAL_PROMPT=0 git clone $url
-  cp -a opsi-server/opsi-server_data/etc /etc/opsi
 
 test:pytest-pylint:
   stage: test
@@ -23,12 +18,9 @@ test:pytest-pylint:
 build:linux-pyinstaller:
   stage: build
   script:
-    - *get-opsi-server
     - poetry lock --no-update
     - poetry install
-    # Conflicts with smbclient package
-    - rm .venv/bin/smbclient.py || true
-    - poetry run opsi-dev-tool --pyinstaller-poetry-build -l info
+    - poetry run opsi-dev-cli -l info pyinstaller build
     - ./dist/opsi-deploy-client-agent --version
-    - '[ "$CI_COMMIT_TAG" = "" ] && opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent "$CI_JOB_ID"'
-    - '[ "$CI_COMMIT_TAG" = "" ] || opsi-dev-tool -l info --binary-push dist/opsi-deploy-client-agent'
+    - '[ "$CI_COMMIT_TAG" = "" ] && opsi-dev-cli -l info binary push dist/opsi-deploy-client-agent --prerelease="$CI_JOB_ID"'
+    - '[ "$CI_COMMIT_TAG" = "" ] || opsi-dev-cli -l info binary push dist/opsi-deploy-client-agent'
