[chg] Make compatible with opsi 4.2

--- a/opsi-dev-tool.yml
+++ b/opsi-dev-tool.yml
@@ -4,6 +4,8 @@ pyinstaller-poetry:
   hidden_imports:
     all:
       - paramiko
+      - OPSI.Backend.File
+      - OPSI.Backend.MySQL
   extra_args:
     darwin:
       - --exclude-module
