--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ packages = [
 [[tool.poetry.source]]
 name = "uib"
 url = "https://pypi.uib.gmbh/simple/"
+priority = "primary"
+
+[[tool.poetry.source]]
+name = "PyPI"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
@@ -21,16 +25,14 @@ paramiko = "^2.9"
 impacket = "^0.10"
 smbprotocol = "^1.9"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.0"
-pyinstaller = "^5.1"
-pylint = "^2.12"
-tan = "^22.2"
-flake8 = "^6.0"
-mypy = "^1.1"
-
 [tool.poetry.scripts]
 opsi-deploy-client-agent = "opsideployclientagent.__main__:main"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.2.2"
+pytest = "^7.0"
+pyinstaller = "^5.1"
+mypy = "^1.1"
 
 [tool.black]
 line-length = 140
@@ -40,3 +42,10 @@ use-tabs = true
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+
+[tool.ruff]
+line-length = 140
+
+[tool.ruff.format]
+indent-style = "tab"
