[chg,pub] Update python packages
  - Removing attrs (23.2.0)
  - Removing automat (22.10.0)
  - Removing chardet (5.2.0)
  - Removing constantly (23.10.4)
  - Removing greenlet (3.0.3)
  - Removing hyperlink (21.0.0)
  - Removing incremental (22.10.0)
  - Removing pexpect (4.9.0)
  - Removing pyasn1-modules (0.3.0)
  - Removing python-opsi (4.3.3.0)
  - Removing python-pam (2.0.2)
  - Removing ruyaml (0.91.0)
  - Removing service-identity (24.1.0)
  - Removing sqlalchemy (1.4.51)
  - Removing twisted (23.10.0)
  - Removing zope-interface (6.2)
  - Updating pycparser (2.21 -> 2.22)
  - Updating pyasn1 (0.5.1 -> 0.6.0)
  - Updating typing-extensions (4.9.0 -> 4.12.2)
  - Updating annotated-types (0.6.0 -> 0.7.0)
  - Updating blinker (1.7.0 -> 1.8.2)
  - Updating certifi (2024.2.2 -> 2024.7.4)
  - Updating cryptography (42.0.4 -> 42.0.8)
  - Updating idna (3.6 -> 3.7)
  - Updating itsdangerous (2.1.2 -> 2.2.0)
  - Updating jinja2 (3.1.3 -> 3.1.4)
  - Updating packaging (23.2 -> 24.1)
  - Updating pydantic-core (2.16.2 -> 2.20.1)
  - Updating pygments (2.17.2 -> 2.18.0)
  - Updating setuptools (69.1.0 -> 70.3.0)
  - Updating urllib3 (2.2.1 -> 2.2.2)
  - Updating werkzeug (3.0.1 -> 3.0.3)
  - Updating bcrypt (4.1.2 -> 4.1.3)
  - Installing dsinternals (1.2.4): Preparing...
  - Updating flask (3.0.2 -> 3.0.3): Installing...
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Updating flask (3.0.2 -> 3.0.3)
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Updating flask (3.0.2 -> 3.0.3)
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Installing dsinternals (1.2.4): Installing...
  - Updating flask (3.0.2 -> 3.0.3)
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Updating flask (3.0.2 -> 3.0.3)
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Installing dsinternals (1.2.4)
  - Updating flask (3.0.2 -> 3.0.3)
  - Updating msgpack (1.0.7 -> 1.0.8)
  - Updating pluggy (1.4.0 -> 1.5.0)
  - Updating psutil (5.9.8 -> 6.0.0)
  - Updating pydantic (2.6.1 -> 2.8.2)
  - Updating pyi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,18 +22,18 @@ name = "PyPI"
 python = ">=3.11,<3.12"
 python-opsi-common = ">=4.3,<4.4"
 paramiko = "^2.9"
-impacket = "^0.10"
-smbprotocol = "^1.9"
-python-opsi = "^4.3.0.11"
+impacket = "^0.11"
+smbprotocol = "^1.13"
+gssapi = "^1.8"
 
 [tool.poetry.scripts]
 opsi-deploy-client-agent = "opsideployclientagent.__main__:main"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.2.2"
-pytest = "^7.0"
-pyinstaller = "^5.1"
-mypy = "^1.1"
+ruff = "^0.5"
+pytest = "^8.2"
+pyinstaller = "^6.9"
+mypy = "^1.10"
 
 [tool.black]
 line-length = 140
