--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,17 @@
+[build-system]
+requires = [ "poetry>=0.12",]
+build-backend = "poetry.masonry.api"
+
 [tool.poetry]
 name = "opsi-deploy-client-agent"
-version = "4.3.0.0"
+version = "4.3.0.1"
 description = "tool to deploy the opsi-client-agent on linux, windows and macOS clients"
 homepage = "https://www.opsi.org"
 license = "AGPL-3.0"
-authors = ["uib GmbH <info@uib.de>"]
-maintainers = ["uib GmbH <info@uib.de>"]
-packages = [
-	{ include = "opsideployclientagent" }
-]
+authors = [ "uib GmbH <info@uib.de>",]
+maintainers = [ "uib GmbH <info@uib.de>",]
+[[tool.poetry.packages]]
+include = "opsideployclientagent"
 
 [[tool.poetry.source]]
 name = "uib"
@@ -17,6 +20,14 @@ priority = "primary"
 
 [[tool.poetry.source]]
 name = "PyPI"
+
+[tool.black]
+line-length = 140
+target-version = [ "py39", "py310",]
+use-tabs = true
+
+[tool.ruff]
+line-length = 140
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
@@ -29,24 +40,11 @@ gssapi = "^1.8"
 [tool.poetry.scripts]
 opsi-deploy-client-agent = "opsideployclientagent.__main__:main"
 
+[tool.ruff.format]
+indent-style = "tab"
+
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5"
 pytest = "^8.2"
 pyinstaller = "^6.9"
 mypy = "^1.10"
-
-[tool.black]
-line-length = 140
-target-version = ['py39', 'py310']
-use-tabs = true
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
-
-
-[tool.ruff]
-line-length = 140
-
-[tool.ruff.format]
-indent-style = "tab"
