[chg,pub] Update python packages
Updating paramiko (2.12.0 -> 3.4.0)
Add pydantic-core (2.20)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,10 +32,11 @@ line-length = 140
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
 python-opsi-common = ">=4.3,<4.4"
-paramiko = "^2.9"
+paramiko = "^3.4"
 impacket = "^0.11"
 smbprotocol = "^1.13"
 gssapi = "^1.8"
+pydantic-core = "^2.18"
 
 [tool.poetry.scripts]
 opsi-deploy-client-agent = "opsideployclientagent.__main__:main"
